data/derived/fa15/progs/unify/prog1324.ml.out
Characters 82-83:
  List.fold_left f base xs;;
                 ^
Error: This expression has type int -> 'a -> 'b -> int -> int
       but an expression was expected of type int -> 'a -> int
       Type 'b -> int -> int is not compatible with type int 
